--- a/example/sample-slack-notify.yaml
+++ b/example/sample-slack-notify.yaml
@@ -4,4 +4,4 @@ metadata:
   name: slacknotify-sample
 spec:
   message: "Hello from slack notify!"
-  slack_webhook: "https://hooks.slack.com/services/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"
+  slack_webhook: "https://hooks.slack.com/services/hogehoge"
