--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,1 @@
-export KUBECONFIG="/Users/kafuhamada/Documents/Study/Golang/sample/slack-nofity/.kubeconfig"
+export KUBECONFIG="/Users/kafuhamada/Documents/Study/Golang/sample/slack-nofity/kubeconfig"
